Updated the carousel to center images and prevent cropping

--- a/src/App.css
+++ b/src/App.css
@@ -21,18 +21,11 @@ tbody {
   width: 100%;
 }
 
-.carousel-inner {
-  width: 100%;
-  height: 490px;
-  vertical-align: middle;
-  /* background-color: #556FC4; */
-}
-
 .carousel-indicators li {
   background-color: rgba(128, 128, 128, 0.78) !important;
 }
 
-.carousel-indicators .active{
+.carousel-indicators .active{ 
   background-color: rgba(0, 0, 0, 0.78) !important;
 }
 /* .carousel-indicators li::after {
@@ -65,11 +58,33 @@ tbody {
   margin-top: 2%;
 } */
 
+.carousel-inner {
+  width: 100%;
+  height: 60vh;
+}
+
 .carousel-item{
-  margin-top: 50%;
-  transform: translateY(-50%);
-  padding-left: 10%;
-  padding-right: 10%;
+  height: 100%;
+  width: 100%;
+  vertical-align: middle;
+}
+
+.carousel-item-img-contain{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+.carousel-item-img-contain > img{
+  max-width: 80%;
+  max-height:80%;
+  min-width: 50%;
+  min-height: 50%;
 }
 
 .prod-body-images {
